# zm-dpa

./: .gitignore  CONTRIBUTING.md  COPYING  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: renovate.json
.github/workflows/: greetings.yml  main.yml
docs/: index.md  part-1.md  part-10.md  part-11.md  part-2.md  part-3.md  part-4.md  part-5.md  part-6.md  part-7.md  part-8.md  part-9.md  references.md
docs/stylesheets/: extra.css
